@@ -1,5 +1,11 @@
 2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
+	Some hc08 related updates that I missed earlier
+	* sim/ucsim/stypes.h
+        * support/regression/ports/spec.mk      
+
+2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
 	New target "hc08" for the Motorola 68hc08 family of micros
         
 	* configure
